Multithreading works, but no synchronization

--- a/laplace_asm/laplace_asm.vcxproj
+++ b/laplace_asm/laplace_asm.vcxproj
@@ -111,6 +111,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ModuleDefinitionFile>%(ProjectDir)laplace.def</ModuleDefinitionFile>
       <NoEntryPoint>true</NoEntryPoint>
+      <AdditionalDependencies>kernel32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -129,6 +130,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ModuleDefinitionFile>%(ProjectDir)laplace.def</ModuleDefinitionFile>
       <NoEntryPoint>true</NoEntryPoint>
+      <AdditionalDependencies>kernel32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
